editable-table.scss
$font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Yu Gothic", YuGothic, sans-serif;
$bg-color: #ffffff;
$fg-color: #303030;
$accent-color: #0080f0;

.editable-table {
  &__container {
    &, * {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    // ======== Container ========

    background-color: $bg-color;
    border: 2px solid mix($bg-color, $fg-color, 75%);
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    overflow: auto;
    position: relative;
    z-index: 0;
    &[data-focus="true"] {
      border-color: $accent-color;
    }

    // ======== TABLE ========

    table {
      border-spacing: 0;
    }

    // ======== TBODY ========

    tbody {
      overflow: auto;
    }

    // ======== TH and TD ========

    th,
    td {
      border-right: 1px solid mix($bg-color, $fg-color, 75%);
      border-bottom: 1px solid mix($bg-color, $fg-color, 75%);
      cursor: default;
      font-family: $font-family;
      font-size: 1rem;
      line-height: 1.25;
      padding: 0.5rem;
      position: relative;
      user-select: none;
    }

    // ======== TH ========

    th {
      background-color: mix($bg-color, $fg-color, 87.5%);
      color: $fg-color;
      font-weight: 700;
      position: sticky;
      white-space: nowrap;
    }
    thead th {
      top: 0;
      z-index: 2;
      &:first-child {
        left: 0;
        z-index: 3;
      }
    }
    tbody th {
      left: 0;
      z-index: 1;
    }

    // ======== TD ========

    tr td {
      background-color: $bg-color;
      color: $fg-color;
      white-space: pre;
    }
    tr:nth-child(even) td {
      background-color: mix($bg-color, $fg-color, 93.75%);
    }
    tr td[data-cursor="true"] {
      background-color: $accent-color;
      color: $bg-color;
    }
    &[data-focus="false"] tr td[data-cursor="true"] {
      background-color: mix($bg-color, $accent-color, 50%);
    }
    &[data-inputting="true"] tr td[data-cursor="true"] {
      padding: 0;
    }

    // ======== Boolean Type ========

    tr td[data-type="boolean"] {
      cursor: pointer;
      text-align: center;
      &[data-cursor="false"]:hover {
        color: $accent-color;
      }

      &::before {
        content: "✔";
      }
      &[data-checked="false"]::before {
        opacity: 0.125;
      }
    }

    // ======== Number and Text Type ========

    td input[type="text"],
    td textarea {
      appearance: none;
      background-color: $bg-color;
      border-style: none;
      color: $fg-color;
      display: block;
      font-family: $font-family;
      font-size: 1rem;
      outline: 2px solid $accent-color;
      position: relative;
      z-index: 3;
    }

    // ======== Number Type ========

    tr td[data-type="number"] {
      text-align: right;
    }

    td input[type="text"] {
      padding: 0 0.5rem;
    }

    // ======== Text Type ========

    td textarea {
      line-height: 1.15;
      height: 100%;
      overflow: hidden;
      overflow-wrap: normal;
      padding: 0.5rem;
      resize: none;
      word-break: keep-all;
      white-space: pre-line;
      word-break: keep-all;
    }

    // ======== Button Regulation ========

    tr td[data-regulation="button"] {
      cursor: pointer;
      padding: 0.25rem;

      div {
        background-color: $bg-color;
        border: 1px solid mix($bg-color, $fg-color, 75%);
        border-radius: 4px;
        color: $fg-color;
        cursor: pointer;
        padding: 0.2rem 0.5rem; // NOTICE: `0.25rem` だと Chrome でズレる
        text-align: center;
        &:hover {
          background-color: mix($bg-color, $accent-color, 87.5%);
        }
      }
    }

    // ======== Select Regulation ========

    tr td[data-regulation="select"] {
      padding-right: 1.5rem;

      &::after {
        content: "▼";
        opacity: 0.125;
        position: absolute;
        right: 0.5rem;
      }
    }
  }

  // ======== Listbox Regulation ========

  &__listbox {
    background-color: $bg-color;
    border: 2px solid $accent-color;
    box-sizing: border-box;
    color: $fg-color;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    list-style: none;
    margin: 0;
    overflow-y: scroll;
    padding: 0;
    position: absolute;
    z-index: 4;

    li {
      cursor: pointer;
      font-family: $font-family;
      padding: 0.25rem 0.5rem;
      user-select: none;
      &:hover {
        background-color: mix($bg-color, $accent-color, 87.5%);
      }
      &[data-selected="true"] {
        background-color: $accent-color;
        color: $bg-color;
      }
    }
  }
}

